# FISR-Bond-Rebalancer

./: Dockerfile  README.md  docker-compose.yml  fisr_trading.db  pyproject.toml
.github/workflows/: bot_runner.yml
src/: broker.py  dashboard.py  db.py  execution.py  ib_client.py  risk.py  strategy.py
