[project]
name = "fisr-bond-rebalancer"
version = "0.1.0"
description = ""
authors = [
    {name = "Sama Borhani",email = "157335016+Sama-Borhani@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "ib-async (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
